# ray-tracer

./: CMakeLists.txt
glad/include/: glad.h
glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
src/: aabb.cpp  aabb.hpp  app.cpp  app.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  channel.hpp  config.hpp  gl_renderer.cpp  gl_renderer.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  interval.cpp  interval.hpp  job_manager.hpp  main.cpp  material.cpp  material.hpp  png_renderer.cpp  png_renderer.hpp  quad.hpp  rand.cpp  rand.hpp  ray.cpp  ray.hpp  raytrace_scene.cpp  raytrace_scene.hpp  raytracer.cpp  raytracer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  (+10 more)
src/genetic_algorithm/: algorithm.cpp  algorithm.hpp  crossover.cpp  crossover.hpp  mutation.cpp  mutation.hpp  selection.cpp  selection.hpp
